Grinder 3.0-beta19
------------------

  Removed redundant getLogger() and getFilenameFactory() from
  PluginProcessContext and PluginThreadContext. Plug-ins can get these
  services from the script context object and share them with worker
  threads.

  The PluginRegistry.register() method now takes an instance of
  GrinderPlugin, rather than a class that implements GrinderPlugin.

  Fix bug 820481 - StringIndexOutOfBoundsException when logging.
  Thanks to Dragos Cernahoschi and Gordon Reid for reports.

  Fix bug 805013 - mean time is not correct. Thanks to all who
  reported this, and to Jan Wilmaers and Bart Bauwens for their
  investigation and analysis.


Grinder 3.0-beta18
------------------

  Fix console column header resizing by working around Java bug
  4760433.

  Fix the TCPProxy SSL support that I inadvertently broke in beta 17.

  Allow the console Look and Feel to be changed.

  HTTPPlugin updates from Bertrand:

   - Provide access to HTTPClient content and transfer decoding
   support.

   - Minor updates to HTTPPluginTCPProxyFilter2.

  Remove the Sniffer web app.

  Fail hard if script attempts to register detail statistics view from
  worker thread.

  Support scripts that sleep outside of worker threads.

  Allow table cells to be copied to clipboard and (with J2SE 1.4 and
  later) copy dragged.


Grinder 3.0-beta17
------------------

  Fix bug 872546 - using HTTPPlugin with no console hangs the worker
  processes. The change involves explicitly calling
  InetAddress.getLocalHost() up front, indicating that the underlying
  cause is a very strange JVM issue.

  Fix bug 876097 - ClonePyInstance not included in grinder.jar. Thanks
  to Karl Wyer for the report.

  Fix implicit grinder object deprecation message. Thanks to Christian
  Sell for the report.

  Minor updates and fixes to the HTTPPluginTCPProxyFilters from
  Bertrand Ave.

  Fix bug 868587 - The HTTP plugin now uses a new SSL session for each